# graphtype

./: example.ipynb  pyproject.toml
graphtype/: __init__.py
tests/: test_classes.py  test_edgedata.py  test_nodedata.py
