[project]
name = "graphtype"
version = "0.1.1"
description = "Enforce graph, node and edge attribute types on NetworkX Graphs."
readme = "README.md"
requires-python = ">=3.10,<3.11"
dependencies = [
    "networkx>=3.4.2",
    "numpy>=2.2.6",
]

[dependency-groups]
dev = [
    "ruff>=0.13.1",
]
docs = [
    "jupyter==1.1.1",
]
test = [
    "pytest==8.4.2",
    "pandas>=2.3.2",
]
